--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,4 +15,6 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build -t visnu-flask:$(date +%s) ./Task4-github_action/.
+      run: |
+        echo "${{ secrets.Docker_passwd }}" | docker login -u "visnudev" --password-stdin
+        docker build -t visnu-flask:$(date +%s) ./Task4-github_action/.
