--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,5 +17,5 @@ jobs:
     - name: Build the Docker image
       run: |
         echo "${{ secrets.Docker_passwd }}" | docker login -u "visnudev" --password-stdin
-        docker build -t visnu-flask-app-githubactions:$(date +%s) ./Task4-github_action/.
-        docker push visnu-flask-app-githubactions:$(date +%s)
+        docker build -t visnu-flask-app-githubactions:latest ./Task4-github_action/.
+        docker push visnu-flask-app-githubactions:latest
