--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,4 +18,4 @@ jobs:
       run: |
         echo "${{ secrets.Docker_passwd }}" | docker login -u "visnudev" --password-stdin
         docker build -t visnu-flask-app-githubactions ./Task4-github_action/.
-        docker push visnu-flask-app-githubactions:latest
+        docker push ./Task4-github_action/visnu-flask-app-githubactions:latest
